--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>BoBo - 刘宇波</title>
+    <title>BoBo Fans</title>
     <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico?a">
   </head>
   <body>
