--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>BoBo Fans</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico?a">
+    <title>BoBo-Fans</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
