准备后台开发

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>BoBo-Fans</title>
     <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="./static/img/logo-57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./static/img/logo-72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="./static/img/logo-114.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="./static/img/logo-144.png" />
+    <link rel="icon" sizes="144x144" href="./static/img/logo-144.png">
   </head>
   <body>
     <div id="app"></div>
