--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>BoBo-Fans</title>
     <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
     <link rel="apple-touch-icon" href="./static/img/logo-144.png" />
@@ -11,5 +11,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="./static/js/qrcode.js"></script>
   </body>
 </html>
