--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="./static/img/favicon.ico">
     <link rel="apple-touch-icon" href="./static/img/logo-144.png" />
     <link rel="apple-touch-startup-image" href="./static/img/avatar.jpg"/>
+    <link rel="stylesheet" href="./static/boot/css/bootstrap.css">
   </head>
   <body>
     <div id="app"></div>
